docker container added to the project, including sonarQube